# raycasting

./: CMakeLists.txt
include/: Color.hpp  Cylinder.hpp  Material.hpp  Matrix4.hpp  Mesh.hpp  MirrorSphere.hpp  Object.hpp  Plane.hpp  Point.hpp  Ray.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp
src/: Color.cpp  Cylinder.cpp  Material.cpp  Matrix4.cpp  Mesh.cpp  MirrorSphere.cpp  Object.cpp  Plane.cpp  Sphere.cpp  Triangle.cpp  Vector.cpp  main.cpp
